log
Thu 20 Apr 2023 03:00:02 AM UTC: 
 tests:  1|8
total_score: 0/70
a7eae09
Thu 20 Apr 2023 03:20:52 AM UTC: 
 treemap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:40:19: error: ‘Treemap’ undeclared (first use in this function); did you mean ‘TreeMap’?
   40 |   TreeMap *new = (Treemap *) malloc(sizeof(Treemap));
      |                   ^~~~~~~
      |                   TreeMap
treemap.c:40:19: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:40:28: error: expected expression before ‘)’ token
   40 |   TreeMap *new = (Treemap *) malloc(sizeof(Treemap));
      |                            ^
treemap.c:44:3: error: ‘map’ undeclared (first use in this function)
   44 |   map->root = NULL;
      |   ^~~
Compilation failed
b1a5d22
Thu 20 Apr 2023 03:21:09 AM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:40:19: error: ‘Treemap’ undeclared (first use in this function); did you mean ‘TreeMap’?
   40 |   TreeMap *new = (Treemap *) malloc(sizeof(Treemap));
      |                   ^~~~~~~
      |                   TreeMap
treemap.c:40:19: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:40:28: error: expected expression before ‘)’ token
   40 |   TreeMap *new = (Treemap *) malloc(sizeof(Treemap));
      |                            ^
Compilation failed
06ec62b
Thu 20 Apr 2023 03:21:55 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:40:43: error: ‘Treemap’ undeclared (first use in this function); did you mean ‘TreeMap’?
   40 |   TreeMap *new = (TreeMap*) malloc(sizeof(Treemap));
      |                                           ^~~~~~~
      |                                           TreeMap
treemap.c:40:43: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
f95717f
Thu 20 Apr 2023 03:22:05 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|8
total_score: 0/70
b7e3efa
Thu 20 Apr 2023 03:22:21 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
1630ee3
Thu 20 Apr 2023 03:58:03 AM UTC: 
 treemap.c | 11 ++++++++---
 1 file changed, 8 insertions(+), 3 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:76:5: error: ‘map’ undeclared (first use in this function)
   76 |     map->current = nodo;
      |     ^~~
treemap.c:76:5: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:77:12: error: returning ‘TreeNode *’ from a function with incompatible return type ‘Pair *’ [-Werror=incompatible-pointer-types]
   77 |     return nodo;
      |            ^~~~
treemap.c:82:10: error: returning ‘TreeNode *’ from a function with incompatible return type ‘Pair *’ [-Werror=incompatible-pointer-types]
   82 |   return nodo;
      |          ^~~~
cc1: all warnings being treated as errors
Compilation failed
4cfc77a
Thu 20 Apr 2023 03:58:13 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:77:12: error: returning ‘TreeNode *’ from a function with incompatible return type ‘Pair *’ [-Werror=incompatible-pointer-types]
   77 |     return nodo;
      |            ^~~~
treemap.c:82:10: error: returning ‘TreeNode *’ from a function with incompatible return type ‘Pair *’ [-Werror=incompatible-pointer-types]
   82 |   return nodo;
      |          ^~~~
cc1: all warnings being treated as errors
Compilation failed
1a0542c
Thu 20 Apr 2023 04:23:59 AM UTC: 
 treemap.c | 15 ++++++++++-----
 1 file changed, 10 insertions(+), 5 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:76:10: error: ‘true’ undeclared (first use in this function); did you mean ‘tree’?
   76 |   while (true){
      |          ^~~~
      |          tree
treemap.c:76:10: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:81:18: error: returning ‘TreeNode *’ from a function with incompatible return type ‘Pair *’ [-Werror=incompatible-pointer-types]
   81 |       return nodo->right;
      |              ~~~~^~~~~~~
treemap.c:84:18: error: returning ‘TreeNode *’ from a function with incompatible return type ‘Pair *’ [-Werror=incompatible-pointer-types]
   84 |       return nodo->left;
      |              ~~~~^~~~~~
cc1: all warnings being treated as errors
Compilation failed
f70a2a5
Thu 20 Apr 2023 04:24:37 AM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:82:18: error: returning ‘TreeNode *’ from a function with incompatible return type ‘Pair *’ [-Werror=incompatible-pointer-types]
   82 |       return nodo->right;
      |              ~~~~^~~~~~~
treemap.c:85:18: error: returning ‘TreeNode *’ from a function with incompatible return type ‘Pair *’ [-Werror=incompatible-pointer-types]
   85 |       return nodo->left;
      |              ~~~~^~~~~~
cc1: all warnings being treated as errors
Compilation failed
7cfea97
Thu 20 Apr 2023 04:26:03 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:82:18: error: returning ‘TreeNode *’ from a function with incompatible return type ‘Pair *’ [-Werror=incompatible-pointer-types]
   82 |       return nodo->right;
      |              ~~~~^~~~~~~
treemap.c:85:18: error: returning ‘TreeNode *’ from a function with incompatible return type ‘Pair *’ [-Werror=incompatible-pointer-types]
   85 |       return nodo->left;
      |              ~~~~^~~~~~
cc1: all warnings being treated as errors
Compilation failed
493c39c
Thu 20 Apr 2023 04:28:43 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:82:18: error: returning ‘TreeNode *’ from a function with incompatible return type ‘Pair *’ [-Werror=incompatible-pointer-types]
   82 |       return nodo->right;
      |              ~~~~^~~~~~~
treemap.c:85:18: error: returning ‘TreeNode *’ from a function with incompatible return type ‘Pair *’ [-Werror=incompatible-pointer-types]
   85 |       return nodo->left;
      |              ~~~~^~~~~~
cc1: all warnings being treated as errors
Compilation failed
b2aaab8
Thu 20 Apr 2023 04:29:18 AM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|7
total_score: 5/70
9308501
Thu 20 Apr 2023 04:14:24 PM UTC: 
 treemap.c | 8 +-------
 1 file changed, 1 insertion(+), 7 deletions(-)
test.c: In function ‘searchTreeMap’:
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
test.c:606: error: control reaches end of non-void function [-Werror=return-type]
  606 | }
      | 
At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
5170fdd
Thu 20 Apr 2023 04:14:46 PM UTC: 
 treemap.c | 5 -----
 1 file changed, 5 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:76:7: error: unused variable ‘aux’ [-Werror=unused-variable]
   76 |   int aux = tree->lower_than(key,nodo->pair->key);
      |       ^~~
cc1: all warnings being treated as errors
Compilation failed
82a5f35
Thu 20 Apr 2023 04:20:03 PM UTC: 
 treemap.c | 9 +++++++++
 1 file changed, 9 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:78:9: error: ‘TreeNode’ has no member named ‘current’
   78 |     nodo->current = nodo->pair;
      |         ^~
Compilation failed
fbd4bb3
Thu 20 Apr 2023 04:23:34 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|7
total_score: 5/70
a6e93ab
Thu 20 Apr 2023 04:30:26 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:77:25: error: ‘TreeMap’ has no member named ‘aux’
   77 |     tree->current = tree->aux;
      |                         ^~
Compilation failed
ab57c85
